[gd_scene load_steps=9 format=3 uid="uid://c7g61ykx1uu1y"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_tk3pd"]
[ext_resource type="Texture2D" uid="uid://du3qut1q4hgl2" path="res://assets/sprites/card_base.png" id="1_yqod3"]
[ext_resource type="Texture2D" uid="uid://c382q2gthd5y" path="res://assets/sprites/mana_slot.png" id="2_aovqc"]
[ext_resource type="FontFile" uid="uid://3dxeqlsm06pa" path="res://assets/fonts/MemoryPro.ttf" id="3_jo2eh"]
[ext_resource type="Texture2D" uid="uid://ctljr3vkdpoiw" path="res://assets/sprites/attack_card_image.png" id="4_h0b2h"]

[sub_resource type="LabelSettings" id="LabelSettings_4j566"]
font = ExtResource("3_jo2eh")

[sub_resource type="LabelSettings" id="LabelSettings_irx7i"]
font = ExtResource("3_jo2eh")
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_psfhq"]
font = ExtResource("3_jo2eh")
font_color = Color(0, 0, 0, 1)

[node name="Card" type="Node2D"]
script = ExtResource("1_tk3pd")

[node name="BaseCardSprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_yqod3")

[node name="Mana" type="Node2D" parent="."]
position = Vector2(34, -58)

[node name="ManaSprite" type="Sprite2D" parent="Mana"]
texture = ExtResource("2_aovqc")

[node name="ManaLabel" type="Label" parent="Mana"]
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 10.0
text = "2"
label_settings = SubResource("LabelSettings_4j566")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="Node2D" parent="."]
position = Vector2(-34, -58)

[node name="NameLabel" type="Label" parent="Name"]
offset_right = 59.0
offset_bottom = 23.0
text = "Attack"
label_settings = SubResource("LabelSettings_irx7i")
autowrap_mode = 3

[node name="CardImage" type="Node2D" parent="."]

[node name="CardImageSprite" type="Sprite2D" parent="CardImage"]
position = Vector2(0, -15)
texture = ExtResource("4_h0b2h")

[node name="CardDescriptionLabel" type="Label" parent="."]
offset_left = -33.0
offset_top = 11.0
offset_right = 33.0
offset_bottom = 54.0
text = "Attack +1"
label_settings = SubResource("LabelSettings_psfhq")
autowrap_mode = 3
